# hit_validation

./: .gitattributes  .gitignore  CLAUDE.md  README.md  environment.yaml  pyproject.toml  run_pipeline.sh
01_src/hit_validation/: __init__.py
01_src/hit_validation/m00_preparation/: __init__.py  binding_site_definition.py  ligand_preparation.py  receptor_preparation.py
01_src/hit_validation/m01_docking/: dock6_runner.py  (+7 more)
02_scripts/: 00a_ligand_preparation.py  00b_receptor_preparation.py  00d_binding_site_definition.py  01b_grid_generation.py  01c_dock6_run.py  01d_footprint_rescore.py  01e_score_collection.py  01f_gbsa_rescore.py  01g_mmpbsa_decomp.py  01g_rerun_mmpbsa.py  01h_mmpbsa_analysis.py  01i_trajectory_analysis.py  03a_plip_interaction_analysis.py  04b_footprint_analysis.py  06a_pharmit_pharmacophore.py  06b_pharmit_zone_selector.py  07a_decision_report.py  07b_residue_comparison.py  07c_integrated_analysis.py  07d_binding_mode_analysis.py
03_configs/: 00a_ligand_preparation.yaml  00b_receptor_preparation.yaml  00d_binding_site_definition.yaml  01b_grid_generation.yaml  01c_dock6_run.yaml  01d_footprint_rescore.yaml  01e_score_collection.yaml  01f_gbsa_rescore.yaml  01g_mmpbsa_decomp.yaml  01h_mmpbsa_analysis.yaml  01i_trajectory_analysis.yaml  03a_plip_interaction_analysis.yaml  04b_footprint_analysis.yaml  06a_pharmit_pharmacophore.yaml  06b_pharmit_zone_selector.yaml  07a_decision_report.yaml  07b_residue_comparison.yaml  07c_integrated_analysis.yaml  07d_binding_mode_analysis.yaml
docs/: INSTRUCTIVO_hit_validation_fixes.md  PIPELINE_FIXES_hit_validation.md  SCHEMA_ADAPTER_FIX_m07.md
tests/: audit_all.sh  audit_protonation_states.py  audit_protonation_states_v2.py  audit_protonation_states_v3.py  test_fix_end_to_end.py  test_pipeline.py  validate_fix_all_molecules.py
(+162 files in other folders)
